--- a/frontend/styles/auth.css
+++ b/frontend/styles/auth.css
@@ -44,6 +44,13 @@
     }
 
     & #password-selector {
+        margin-top: 0;
+
+        & .string-selector-label {
+            display: flex;
+            align-items: center;
+        }
+
         & #password {
             padding-right: 4rem;
         }
@@ -51,9 +58,7 @@
         & #password-visibility-button {
             --icon-svg: url("../public/assets/graphics/eye.svg");
             position: absolute;
-            top: 0;
             right: 1rem;
-            height: 100%;
             background: var(--input-secondary);
             cursor: pointer;
             pointer-events: all;
