--- a/frontend/styles/panel.css
+++ b/frontend/styles/panel.css
@@ -183,8 +183,8 @@ smorgas-board panel-element {
     }
 
     &::part(menu-button) {
-        top: 2.5rem;
-        right: 2.5rem;
+        top: 0.5rem;
+        right: 0.5rem;
     }
 
     &::part(menu-button):hover {
